test/classes/initializers/phase1/badDependence.good
badDependence.chpl:11: error: Phase 1 initialization of field "f2" does not match field declaration order
badDependence.chpl:12: error: Phase 1 initialization of field "f3" does not match field declaration order
